log
Sun May 15 17:10:21 HSP 2022: 
 tests:  0|5
total_score: 0/70
a4236f3
Sun May 15 17:23:11 HSP 2022: 
 sudoku.c | 10 ++++++++++
 1 file changed, 10 insertions(+)
In file included from test.c:5:0:
sudoku.c: In function 'get_adj_nodes':
sudoku.c:60:21: error: assignment to expression with array type
         new -> sudo = n -> sudo;
                     ^
sudoku.c:55:11: error: unused variable 'data' [-Werror=unused-variable]
     void* data;
           ^~~~
cc1.exe: all warnings being treated as errors
Compilation failed
362de0c
Sun May 15 17:23:38 HSP 2022: 
 sudoku.c | 1 -
 1 file changed, 1 deletion(-)
In file included from test.c:5:0:
sudoku.c: In function 'get_adj_nodes':
sudoku.c:59:21: error: assignment to expression with array type
         new -> sudo = n -> sudo;
                     ^
Compilation failed
4f6e684
Sun May 15 17:34:58 HSP 2022: 
 sudoku.c | 16 ++++++++++------
 1 file changed, 10 insertions(+), 6 deletions(-)
 tests:  0|5
total_score: 0/70
bce8c9b
Sun May 15 17:35:54 HSP 2022: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
7d1dc99
Sun May 15 17:36:16 HSP 2022: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
eb4c1b7
Sun May 15 17:41:04 HSP 2022: 
 sudoku.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
3742557
Sun May 15 18:28:04 HSP 2022: 
 sudoku.c | 28 ++++++++++++++++++++++++++++
 1 file changed, 28 insertions(+)
 tests:  0|5
total_score: 0/70
6d65697
Sun May 15 18:28:25 HSP 2022: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|5
total_score: 0/70
8c56b5b
Sun May 15 18:31:22 HSP 2022: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|5
total_score: 0/70
6a8d1a6
Sun May 15 18:32:24 HSP 2022: 
 sudoku.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  0|5
total_score: 0/70
b9c287f
Sun May 15 18:33:01 HSP 2022: 
 sudoku.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  0|5
total_score: 0/70
1143b00
Sun May 15 18:34:13 HSP 2022: 
 sudoku.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  0|5
total_score: 0/70
0390707
Sun May 15 18:36:59 HSP 2022: 
 sudoku.c | 12 +++++++-----
 1 file changed, 7 insertions(+), 5 deletions(-)
 tests:  0|5
total_score: 0/70
924ac90
Sun May 15 18:39:12 HSP 2022: 
 sudoku.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  0|5
total_score: 0/70
bff538f
Sun May 15 18:41:57 HSP 2022: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
a7bb4cb
Sun May 15 18:47:25 HSP 2022: 
 sudoku.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
 tests:  0|5
total_score: 0/70
92f7366
Sun May 15 18:54:48 HSP 2022: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
6e9a9ab
Sun May 15 18:59:29 HSP 2022: 
 sudoku.c | 14 +++++++-------
 1 file changed, 7 insertions(+), 7 deletions(-)
 tests:  0|5
total_score: 0/70
691db45
Sun May 15 19:03:39 HSP 2022: 
 sudoku.c | 12 ++++++------
 1 file changed, 6 insertions(+), 6 deletions(-)
 tests:  0|5
total_score: 0/70
d62528d
Sun May 15 19:08:32 HSP 2022: 
 sudoku.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
 tests:  6|2
total_score: 45/70
4b2a6ef
Sun May 15 19:09:51 HSP 2022: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  6|2
total_score: 45/70
36a5af6
Sun May 15 19:11:38 HSP 2022: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  6|2
total_score: 45/70
fdc9bc0
Sun May 15 19:15:34 HSP 2022: 
 sudoku.c | 5 +++++
 1 file changed, 5 insertions(+)
 tests:  6|2
total_score: 45/70
d1bc43d
Sun May 15 19:16:15 HSP 2022: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  7|1
total_score: 55/70
8ff31ae
Sun May 15 23:13:29 HSP 2022: 
 sudoku.c | 17 ++++++++++++++++-
 1 file changed, 16 insertions(+), 1 deletion(-)
 tests:  7|1
total_score: 55/70
f8a6ec6
Sun May 15 23:16:32 HSP 2022: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  7|1
total_score: 55/70
30608e0
Sun May 15 23:19:35 HSP 2022: 
 sudoku.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  7|1
total_score: 55/70
972d8ca
Sun May 15 23:20:14 HSP 2022: 
 sudoku.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  7|1
total_score: 55/70
bd1c499
Sun May 15 23:26:34 HSP 2022: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  7|1
total_score: 55/70
a67bafc
Sun May 15 23:32:41 HSP 2022: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  7|1
total_score: 55/70
5df8b10
Sun May 15 23:36:20 HSP 2022: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  7|1
total_score: 55/70
db7fb18
Sun May 15 23:37:18 HSP 2022: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  7|1
total_score: 55/70
83cdfcc
Sun May 15 23:45:04 HSP 2022: 
 sudoku.c | 12 +++++++-----
 1 file changed, 7 insertions(+), 5 deletions(-)
 tests:  7|1
total_score: 55/70
6362c2d
